--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.61.3",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "ace-builds": "^1.36.4",
+    "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2",
-    "socket.io-client": "^4.7.5"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
