--- a/BaseImage/Dockerfile.react
+++ b/BaseImage/Dockerfile.react
@@ -4,11 +4,11 @@ FROM node:20-alpine3.19
 # Install dependencies required for building native modules
 RUN apk add --no-cache python3 make g++
 
-# Set up the React App
-WORKDIR /app
-COPY ReactApp/package*.json ./
-RUN npm install
-COPY ReactApp/ .
+# # Set up the React App
+# WORKDIR /app
+# COPY ReactApp/package*.json ./
+# RUN npm install
+# COPY ReactApp/ .
 
 # Set up the runner (Node.js backend for specific commands)
 WORKDIR /home/runner
