--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 PORT = 1001
+
+MONGODB_URI = mongodb+srv://darshanj098:ab1TIu6fNI3R7Ses@cluster0.enofdyv.mongodb.net/webIDE?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET = dthabi268ssvaki4789n
