--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1"
   },
