--- a/BaseImage/runner/package.json
+++ b/BaseImage/runner/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "node-pty": "^1.0.0",
     "nodemon": "^3.1.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "chokidar": "^3.5.3"
   }
 }
